<?xml version="1.0" encoding="utf-8"?>
<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.mit</groupId>
    <artifactId>jwi</artifactId>
    <version>2.4.0</version>
    <packaging>jar</packaging>

    <name>JWI</name>
    <description>The MIT Java Wordnet Interface</description>
    <url>http://projects.csail.mit.edu/jwi/</url>

    <licenses>
        <license>
            <name>Creative Commons Attribution 4.0 International Public License</name>
            <url>http://creativecommons.org/licenses/by/4.0/legalcode</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/rm-hull/jwi.git</connection>
        <developerConnection>scm:git:git@github.com:rm-hull/jwi.git</developerConnection>
        <url>https://github.com/rm-hull/jwi.git</url>
    </scm>

    <developers>
        <developer>
            <id>mark.finlayson</id>
            <name>Mark Finlayson</name>
            <email>markaf@alum.mit.edu</email>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <encoding>UTF-8</encoding>
    </properties>

    <build>
        <sourceDirectory>${basedir}</sourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.2.2</version>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus snapshot repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Sonatype Nexus release repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>
